# MLP

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PEER_REVIEW_DETAILED.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  submission.csv
Algorithms/supervised/Adaboost/app/: api.py
Algorithms/supervised/Adaboost/models/: adaboost_model.joblib
Algorithms/supervised/Adaboost/notebooks/: eda.ipynb
Algorithms/supervised/Adaboost/pipeline/: training_pipeline.py
Algorithms/supervised/Adaboost/src/: data_preprocessing.py  evaluate_model.py  feature_engineering.py  train_model.py
Algorithms/supervised/Decision_tree/: README.md  main.py  requirements.txt
Algorithms/supervised/Decision_tree/config/: model_config.yaml
Algorithms/supervised/Decision_tree/data/processed/: cleaned_data.csv
Algorithms/supervised/Decision_tree/models/: decision_tree_pipeline.pkl
Algorithms/supervised/Decision_tree/notebooks/: 01_eda.ipynb  eda.ipynb
Algorithms/supervised/Decision_tree/reports/: model_report.md
Algorithms/supervised/Decision_tree/src/data/: load_data.py  preprocess.py
Algorithms/supervised/Decision_tree/src/features/: build_features.py
Algorithms/supervised/Decision_tree/src/models/: evaluate_model.py  model_evaluation.py  predict_model.py  train_model.py
Algorithms/supervised/Decision_tree/src/pipelines/: training_pipeline.py
Algorithms/supervised/Decision_tree/src/utils/: helper.py
Algorithms/supervised/NLP_pipeline/: NLP_pipeline.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml
data/: README.md
data/raw/: .gitkeep
docs/: ML_ALGORITHM_CHEATSHEET.md  PROJECT_SUMMARY.md  REORGANIZATION_SUMMARY.md  SETUP.md
frontend/: dashboard.html  index.html  script.js  style.css
models/: .gitkeep
notebooks/: 01_data_exploration.ipynb  02_pipeline_multiple_transformers.ipynb  03_caching_transformer.ipynb  04_hyperparameter_pipeline.ipynb  05_data_ETL.ipynb  06_PCA.ipynb  Linear_regression.ipynb  SGD_regression.ipynb  assignment1-mlp.ipynb  polinomial_regression.ipynb  sklearn_preprocessing.ipynb  submission.csv  submission.parquet  t.py  text tockenization.ipynb
src/mlp/: __init__.py  data_preprocessing.py  pipeline.py  utils.py
tests/: __init__.py  test_data_preprocessing.py
